@@ -1,9 +1,6 @@
 package view;
 
-import controller.DatabaseController;
-import controller.Tabela;
 import controller.VendaController;
-import controller.VendedorController;
 import model.*;
 
 import javax.swing.*;
@@ -20,53 +17,64 @@ public class FinalizacaoView extends TemplateView {
     private JLabel valorFinalLabel;
     private VendaController vendaController;
 
-    private int digitosCartao;
+    private String codigoPix;
+    private int digitosCartao = 0;
     private List<Vendedor> vendedores;
 
     public FinalizacaoView(String titulo, Pessoa pessoa, int digitosCartao) {
         super(titulo);
-        vendaController = new VendaController();
+        this.digitosCartao = digitosCartao;
+        initUI();
+    }
 
+    public FinalizacaoView(String titulo, Pessoa pessoa, String pagamentoPix) {
+        super(titulo);
+        this.codigoPix = pagamentoPix;
+        initUI();
+    }
+
+    private void initUI() {
+        vendaController = new VendaController();
         setLayout(new GridBagLayout());
         GridBagConstraints gbc = new GridBagConstraints();
-        gbc.insets = new Insets(10, 10, 10, 10);
+        gbc.insets = new Insets(10, 15, 10, 15);
         gbc.fill = GridBagConstraints.HORIZONTAL;
 
+        // Painel principal para organizar os componentes
+        JPanel panel = new JPanel(new GridBagLayout());
+        panel.setBorder(BorderFactory.createEmptyBorder(20, 20, 20, 20));
+
         JLabel vendedorLabel = new JLabel("Vendedor:");
+        vendedorLabel.setFont(new Font("Arial", Font.BOLD, 14));
         gbc.gridx = 0;
         gbc.gridy = 0;
-        add(vendedorLabel, gbc);
+        panel.add(vendedorLabel, gbc);
 
         vendedorComboBox = new JComboBox<>();
-        try{
-            try {
-                List<Vendedor> vendedores = Global.database.getVendedores();
-                this.vendedores = vendedores;
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        }catch (Exception e){
-            e.printStackTrace();
-        }
-
-        for (Vendedor vendedor : vendedores) {
-            vendedorComboBox.addItem(vendedor.getNome());
-        }
+        carregarVendedores();
         gbc.gridx = 1;
         gbc.gridy = 0;
-        add(vendedorComboBox, gbc);
+        gbc.weightx = 1.0;
+        panel.add(vendedorComboBox, gbc);
 
         JLabel valorLabel = new JLabel("Valor Final:");
+        valorLabel.setFont(new Font("Arial", Font.BOLD, 14));
         gbc.gridx = 0;
         gbc.gridy = 1;
-        add(valorLabel, gbc);
+        panel.add(valorLabel, gbc);
 
         valorFinalLabel = new JLabel(String.format("R$ %.2f", vendaController.obterValorFinal(Global.pessoa.getCPF())));
+        valorFinalLabel.setFont(new Font("Arial", Font.PLAIN, 14));
         gbc.gridx = 1;
         gbc.gridy = 1;
-        add(valorFinalLabel, gbc);
+        panel.add(valorFinalLabel, gbc);
 
         JButton finalizarButton = new JButton("Finalizar Compra");
+        finalizarButton.setFont(new Font("Arial", Font.BOLD, 14));
+        finalizarButton.setBackground(new Color(50, 150, 250));
+        finalizarButton.setForeground(Color.WHITE);
+        finalizarButton.setFocusPainted(false);
+        finalizarButton.setBorder(BorderFactory.createEmptyBorder(10, 20, 10, 20));
         finalizarButton.addActionListener(new ActionListener() {
             @Override
             public void actionPerformed(ActionEvent e) {
@@ -76,40 +84,64 @@ public class FinalizacaoView extends TemplateView {
         gbc.gridx = 0;
         gbc.gridy = 2;
         gbc.gridwidth = 2;
-        add(finalizarButton, gbc);
+        gbc.fill = GridBagConstraints.CENTER;
+        panel.add(finalizarButton, gbc);
+
+        add(panel, gbc);
+    }
+
+    private void carregarVendedores() {
+        try {
+            vendedores = Global.database.getVendedores();
+            for (Vendedor vendedor : vendedores) {
+                vendedorComboBox.addItem(vendedor.getNome());
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
     private void finalizarCompra() {
         try {
-            Vendedor vendedor = Global.database.getVendedoresByQuery((String) vendedorComboBox.getSelectedItem()).getFirst();
-
+            List<Vendedor> selectedVendedores = Global.database.getVendedoresByQuery((String) vendedorComboBox.getSelectedItem());
+            if (selectedVendedores.isEmpty()) {
+                JOptionPane.showMessageDialog(this, "Vendedor não encontrado.", "Erro", JOptionPane.ERROR_MESSAGE);
+                return;
+            }
+            Vendedor vendedor = selectedVendedores.get(0);
             double valorFinal = vendaController.obterValorFinal(Global.pessoa.getCPF());
 
-            // Lógica para gerar e baixar o recibo
-            String recibo = String.format("Recibo\n\nVendedor: %s\nValor Final: R$ %.2f", vendedor.getNome(), valorFinal);
-            JOptionPane.showMessageDialog(this, recibo, "Recibo", JOptionPane.INFORMATION_MESSAGE);
             Venda vendaAtual = vendaController.cadastrarVenda(vendedor, digitosCartao, new Date());
-            // Código para baixar o recibo
-            try {
-                JFileChooser fileChooser = new JFileChooser();
-                fileChooser.setDialogTitle("Salvar Recibo");
-                int userSelection = fileChooser.showSaveDialog(this);
-                if (userSelection == JFileChooser.APPROVE_OPTION) {
-                    File fileToSave = fileChooser.getSelectedFile();
-                    try (FileWriter writer = new FileWriter(fileToSave)) {
-                        writer.write(recibo);
-                    }
-                    JOptionPane.showMessageDialog(this, "Recibo salvo com sucesso.", "Sucesso", JOptionPane.INFORMATION_MESSAGE);
-                    Global.database.limparCarrinhoByCpf(Global.pessoa.getCPF());
-                    dispose();
-                }
-            } catch (Exception ex) {
-                JOptionPane.showMessageDialog(this, "Erro ao salvar recibo.", "Erro", JOptionPane.ERROR_MESSAGE);
-            }
-        }
-        catch (Exception e){
+            Global.database.limparCarrinhoByCpf(Global.pessoa.getCPF());
+
+            String recibo = this.digitosCartao != 0 ?
+                    String.format("Recibo\n\nVendedor: %s\nValor Final: R$ %.2f\nData: %s\nCartão final: %d\nID da Venda: %d",
+                            vendaAtual.getVendedor().getNome(), vendaAtual.getValor(), vendaAtual.getData(), digitosCartao) :
+                    String.format("Recibo\n\nVendedor: %s\nValor Final: R$ %.2f\nData: %s\nPagamento por PIX\nCódigo PIX: %s",
+                            vendaAtual.getVendedor().getNome(), vendaAtual.getValor(), vendaAtual.getData(), codigoPix);
+
+            JOptionPane.showMessageDialog(this, recibo, "Recibo", JOptionPane.INFORMATION_MESSAGE);
+            salvarRecibo(recibo);
+        } catch (Exception e) {
             e.printStackTrace();
         }
+    }
 
+    private void salvarRecibo(String recibo) {
+        try {
+            JFileChooser fileChooser = new JFileChooser();
+            fileChooser.setDialogTitle("Salvar Recibo");
+            int userSelection = fileChooser.showSaveDialog(this);
+            if (userSelection == JFileChooser.APPROVE_OPTION) {
+                File fileToSave = fileChooser.getSelectedFile();
+                try (FileWriter writer = new FileWriter(fileToSave)) {
+                    writer.write(recibo);
+                }
+                JOptionPane.showMessageDialog(this, "Recibo salvo com sucesso.", "Sucesso", JOptionPane.INFORMATION_MESSAGE);
+                dispose();
+            }
+        } catch (Exception ex) {
+            JOptionPane.showMessageDialog(this, "Erro ao salvar recibo.", "Erro", JOptionPane.ERROR_MESSAGE);
+        }
     }
 }
